--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,8 +7,8 @@
 
   <body>
       <ul>
-	<li><a href="{{ url_for('items_index') }}">List items</a></li>
-	<li><a href="{{ url_for('items_form') }}">Add an item</a></li>
+	<li><a href="{{ url_for('items_index') }}">N‰yt‰ ostoslista</a></li>
+	<li><a href="{{ url_for('items_form') }}">Lis‰‰ uusi tuote listaan</a></li>
       </ul>
     {% block body %}
       <p>
