--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -3,8 +3,8 @@
 {% block body %}
   <table>
     <tr>
-      <th>Tuote</th>
-      <th>Ostettu</th>
+      <th>Item</th>
+      <th>Checked</th>
     </tr>
     {% for item in items %}
     <tr>
@@ -12,7 +12,7 @@
       <td>{{ item.check }}</td>
       <td>
 	<form method="POST" action="{{ url_for('items_set_checked', item_id=item.id) }}">
-	  <input type="submit" value="Merkitse ostetuksi"/>
+	  <input type="submit" value="BUY"/>
 	</form>
       </td>
     </tr>
