--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,6 +6,13 @@
   </head>
 
   <body>
+  {%if current_user.is_authenticated %}
+  <p>
+  Logged in as {{ current_user.username }}. <a href="{{ url_for('auth_logout') }}">Log out</a>
+  </p>
+  {% else %}
+  <a href="{{ url_for('auth_login') }}">Login</a>
+  {% endif %}
       <ul>
 	<li><a href="{{ url_for('items_index') }}">Show the list</a></li>
 	<li><a href="{{ url_for('items_form') }}">Add a new item</a></li>
