--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -14,7 +14,7 @@
 	<form method="POST" action="{{ url_for('items_set_checked', item_id=item.id) }}">
 	  <input type="submit" value="Buy"/>
 	</form>
-	<button type="button" onclick="alert('Try to remove')">Remove!</button>
+	<button type="button" onclick="alert('Method 'remove' doesn't work yet!')">Remove!</button>
       </td>
     </tr>
     {% endfor %}
