sovellus toimii taas vain paikallisesti

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,7 +5,7 @@
     Welcome to use shopping list application.
   </p>
   
-  {% if no_need_to_shop is defined %}
+  {% if list_users is defined %}
   <p>
   	The following users are using this app:
   </p>
