kategoria lisätty, ei toimi vielä

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -15,9 +15,9 @@
   <a href="{{ url_for('auth_create') }}">Create an account</a> 
   {% endif %}
       <ul>
-	<li><a href="{{ url_for('items_index') }}">My page</a></li>
 	<li><a href="{{ url_for('items_index') }}">Show the list</a></li>
 	<li><a href="{{ url_for('items_form') }}">Add a new item</a></li>
+	<li><a href="{{ url_for('items_index') }}">Categories</a></li>
       </ul>
     {% block body %}
       <p>
