--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,19 +7,34 @@
   </head>
 
   <body>
-  {%if current_user.is_authenticated %}
-  <p>
-  Logged in as {{ current_user.username }}. <a href="{{ url_for('auth_logout') }}">Log out</a>
-  </p>
-  {% else %}
-  <a href="{{ url_for('auth_login') }}">Login</a>
-  <a href="{{ url_for('auth_create') }}">Create an account</a> 
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+	<a class="navbar-brand" href="#">ShoppingList</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+            	<a class="nav-link" href="{{url_for('items_index')}}">Show the list</a>
+            </li>
+            <li class="nav-item">
+            	<a class="nav-link" href="{{url_for('items_form')}}">Add a new item</a>
+            </li>
+            <li class="nav-item">
+            	<a class="nav-link" href="{{url_for('items_index')}}">Categories (not working)</a>
+            </li>
+          </ul>
+  <div class="form-inline mt-2 mt-md-0">
+  	{%if current_user.is_authenticated %}
+	<a href="{{ url_for('auth_logout') }}"> Logged in as {{ current_user.username }} -- Logout</a>
+	{% else %}
+	<a href="{{ url_for('auth_login') }}">Login</a>
+	<a href="{{ url_for('auth_create') }}">Sign up</a> 
   {% endif %}
-      <ul>
-	<li><a href="{{ url_for('items_index') }}">Show the list</a></li>
-	<li><a href="{{ url_for('items_form') }}">Add a new item</a></li>
-	<li><a href="{{ url_for('items_index') }}">Categories</a></li>
-      </ul>
+  </div>
+  </div>
+  </nav>
+
     {% block body %}
       <p>
         Content.
