--- a/application/templates/items/new.html
+++ b/application/templates/items/new.html
@@ -18,6 +18,17 @@
 	</ul>
 	</td>
       </tr>
+	<tr>
+	<td>
+		{{ form.category.label }}
+	</td>
+	</tr>
+	<td>
+	<ul>
+		{% for error in form.category.errors %}
+		<li>{{error}}</li>
+	</ul>
+	</td>
       <tr>
 	<td>
 	  {{ form.check.label }}
