--- a/application/templates/items/new.html
+++ b/application/templates/items/new.html
@@ -22,11 +22,15 @@
 	<td>
 		{{ form.category.label }}
 	</td>
+	<td>
+		{{ form.category }}
+	</td>
 	</tr>
 	<td>
 	<ul>
 		{% for error in form.category.errors %}
 		<li>{{error}}</li>
+		{%endfor%}
 	</ul>
 	</td>
       <tr>
