--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -28,8 +28,9 @@
   	{%if current_user.is_authenticated %}
 	<a href="{{ url_for('auth_logout') }}"> Logged in as {{ current_user.username }} -- Logout</a>
 	{% else %}
-	<a href="{{ url_for('auth_login') }}">Login</a>
-	<a href="{{ url_for('auth_create') }}">Sign up</a> 
+	
+	<li><a href="{{ url_for('auth_login') }}">Login</a></li>
+	<li><a href="{{ url_for('auth_create') }}">Sign up</a></li>
   {% endif %}
   </div>
   </div>
