--- a/application/templates/items/new.html
+++ b/application/templates/items/new.html
@@ -18,10 +18,10 @@
 	</tr>
       <tr>
 	<td>
-	  {{ form.check.label }}
+	  {{ form.bought.label }}
 	</td>
 	<td>
-	  {{ form.check }}
+	  {{ form.bought }}
 	</td>
       </tr>
       <tr>
