kategorian näkyvyyttä muokattu

--- a/application/templates/categories/new.html
+++ b/application/templates/categories/new.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
   
 {% block body %}
-<form method="POST" action="{{ url_for('categories_create') }}">
+<form method="POST" action="{{ url_for('category_create') }}">
 <table>
     <tr>
 	<td>
