--- a/application/templates/categories/list.html
+++ b/application/templates/categories/list.html
@@ -2,9 +2,12 @@
 
 {% block body %}
   <table>
+  	<tr>
+  		<li><a href="{{ url_for('category_create') }}">Add new</a></li>
+  	</tr>
     <tr>
       <th>Name</th>
-      <th>Number of items</th>
+      <th>Size</th>
     </tr>
     {% for category in categories %}
     <tr>
