--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -4,11 +4,13 @@
 {% block body %}
   <table>
     <tr>
+      <th>Id</th>
       <th>Item</th>
       <th>Bought</th>
     </tr>
     {% for item in items %}
     <tr>
+      <td>{{ item.id }}</td>
       <td>{{ item.name }}</td>
       <td>{{ item.bought }}</td>
       <td>
