--- a/application/templates/categories/new.html
+++ b/application/templates/categories/new.html
@@ -5,10 +5,10 @@
 <table>
     <tr>
 	<td>
-	  {{ form.category.label }}
+	  {{ form.name.label }}
 	</td>
 	<td>
-	  {{ form.category }}
+	  {{ form.name }}
 	</td>
 	<ul>
 		{% for error in form.name.errors %}
