näkymää muokattu toimivammaksi

--- a/application/templates/items/new.html
+++ b/application/templates/items/new.html
@@ -16,6 +16,15 @@
 		{%endfor%}
 	</ul>
 	</tr>
+	<tr>
+		<select class="custom-select custom-select-sm">
+			<option selected>Select the category</option>
+			<option value="1">This</option>
+			<option value="2">is</option>
+			<option value="3">not</option>
+			<option value="4">working</option>
+		</select>
+	</tr>
       <tr>
 	<td>
 	  {{ form.bought.label }}
