--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -21,7 +21,7 @@
             	<a class="nav-link" href="{{url_for('items_form')}}">Add a new item</a>
             </li>
             <li class="nav-item">
-            	<a class="nav-link" href="{{url_for('categories_index')}}">Categories (not working)</a>
+            	<a class="nav-link" href="{{url_for('categories_index')}}">Categories</a>
             </li>
           </ul>
   <div class="form-inline mt-2 mt-md-0">
