--- a/application/templates/items/new.html
+++ b/application/templates/items/new.html
@@ -17,13 +17,19 @@
 	</ul>
 	</tr>
 	<tr>
-		<select class="custom-select custom-select-sm">
-			<option selected>Select the category</option>
-			<option value="1">This</option>
-			<option value="2">is</option>
-			<option value="3">not</option>
-			<option value="4">working</option>
-		</select>
+		<td>
+			{{ form.category_id.label }}
+		</td>
+		<td>
+			{{ form.category_id }}
+		</td>
+		<td>
+			<ul>
+				{% for error in form.category_id.errors %}
+				<li>{{error}}</li>
+				{%endfor%}
+			</ul>
+		</td>
 	</tr>
       <tr>
 	<td>
@@ -32,6 +38,11 @@
 	<td>
 	  {{ form.bought }}
 	</td>
+	<ul>
+		{% for error in form.bought.errors %}
+		<li>{{error}}</li>
+		{%endfor%}
+	</ul>
       </tr>
       <tr>
 	<td colspan="2">
