--- a/application/templates/categories/new.html
+++ b/application/templates/categories/new.html
@@ -2,25 +2,25 @@
   
 {% block body %}
 <form method="POST" action="{{ url_for('category_create') }}">
-<table>
-    <tr>
-	<td>
-	  {{ form.name.label }}
-	</td>
-	<td>
-	  {{ form.name }}
-	</td>
-	<ul>
-		{% for error in form.name.errors %}
-		<li>{{error}}</li>
-		{%endfor%}
-	</ul>
-	</tr>
-      <tr>
-	<td colspan="2">
-	  <input type="submit" value="Create a category"/>
-	</td>
-      </tr>
-</table>
+ 	<div class="form-group row">
+		<td>
+			 {{ form.name.label }}
+		</td>
+		<div class="col-sm-10">
+			<td>
+			  {{ form.name }}
+			</td>
+			<ul>
+				{% for error in form.name.errors %}
+				<li>{{error}}</li>
+				{%endfor%}
+			</ul>
+		</div>
+	</div>
+    <div class="form.group row">
+	  <div class="col-sm-10">
+	  	<button type="submit" class="btn btn-primary">Create a category</button>
+	  </div>
+    </div>
 </form>
 {% endblock %}
