--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -2,12 +2,15 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <table>
+  <table class="table table-striped">
+  <thead>
     <tr>
       <th>Id</th>
       <th>Item</th>
       <th>Bought</th>
     </tr>
+  </thead>
+  <tbody>
     {% for item in items %}
     <tr>
       <td>{{ item.id }}</td>
@@ -25,5 +28,6 @@
       </td>
     </tr>
     {% endfor %}
+  </tbody>
   </table>
 {% endblock %}
