--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -14,6 +14,7 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
+          {%if current_user.is_authenticated %}
             <li class="nav-item">
             	<a class="nav-link" href="{{url_for('items_index')}}">Show the list</a>
             </li>
@@ -23,6 +24,7 @@
             <li class="nav-item">
             	<a class="nav-link" href="{{url_for('categories_index')}}">Categories</a>
             </li>
+            {% endif %}
           </ul>
   <div class="form-inline mt-2 mt-md-0">
   	{%if current_user.is_authenticated %}
