--- a/application/templates/categories/list.html
+++ b/application/templates/categories/list.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<div class="table-responsive">
   <table class="table">
   	<tr>
   		<a href="{{ url_for('categories_form') }}" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Add new</a>
   	</tr>
   	<thead>
     <tr>
+      <th>Id</th>
       <th>Name</th>
       <th>Size</th>
     </tr>
@@ -14,15 +16,17 @@
     <tbody>
     {% for category in categories %}
     <tr>
+      <td>{{ category.id }}</td>
       <td>{{ category.cname }}</td>
       <td>{{ category.size }}</td>
       <td>
-	<form method="POST" action="{{ url_for('categories_remove', category_id=category.id) }}">
-	  <input type="submit" value="Delete"/>
-	</form>
+		<form method="POST" action="{{ url_for('categories_remove', category_id=category.id) }}">
+	  		<input type="submit" value="Delete"/>
+		</form>
       </td>
     </tr>
     {% endfor %}
     </tbody>
   </table>
+ </div>
 {% endblock %}
