--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<div class="table-responsive"></div>
+<div class="table-responsive">
   <table class="table table-striped">
   <thead>
     <tr>
