herokua yritetty saada toimimaan

--- a/application/templates/categories/list.html
+++ b/application/templates/categories/list.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<div class="table-responsive">
+  {% if current_user.is_authenticated %}
+  <div class="table-responsive">
   <table class="table">
   	<tr>
   		<a href="{{ url_for('categories_form') }}" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Add new</a>
@@ -28,5 +29,6 @@
     {% endfor %}
     </tbody>
   </table>
- </div>
+  </div>
+  {% endif %}
 {% endblock %}
