--- a/application/templates/items/list.html
+++ b/application/templates/items/list.html
@@ -2,7 +2,8 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<div class="table-responsive">
+ {% if current_user.is_authenticated %}
+  <div class="table-responsive">
   <table class="table table-striped">
   <thead>
     <tr>
@@ -34,4 +35,5 @@
   </tbody>
   </table>
   </div>
+ {% endif %}
 {% endblock %}
