--- a/application/templates/categories/new.html
+++ b/application/templates/categories/new.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
   
 {% block body %}
+ {% if current_user.is_authenticated %}
 <form method="POST" action="{{ url_for('category_create') }}">
  	<div class="form-group row">
 		<td>
@@ -23,4 +24,5 @@
 	  </div>
     </div>
 </form>
+ {% endif %}
 {% endblock %}
