tekstikenttiä lisätty selkeyttämään sovellusta

--- a/application/templates/auth/new.html
+++ b/application/templates/auth/new.html
@@ -2,6 +2,7 @@
   
 {% block body %}
 <form method="POST" action="{{ url_for('auth_create') }}">
+  <p class="font-weight-bold">Choose your username and password. Both must be at least 4 characters long.</p>
   <table>
     <tr>
       <td>
