--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<div class="table-responsive">
+
+<h2>Welcome to ShoppingList -application</h2>
+<h4>Please login or sign up</h4>
+
 {{ error }}
 <form method="POST" action="{{ url_for('auth_login') }}">
   <table>
@@ -27,4 +32,5 @@
     </tr>
     </table>
 </form>
+</div>
 {% endblock %}
