--- a/application/templates/categories/list.html
+++ b/application/templates/categories/list.html
@@ -31,6 +31,7 @@
 	<tr>
   	  <a href="{{ url_for('categories_form') }}" class="btn btn-success btn-lg active" role="button" aria-pressed="true">Add new</a>
   	</tr>
+  	{{ error }}
  </div>
  {% endif %}
 {% endblock %}
